--- a/Snack/Snake.csproj
+++ b/Snack/Snake.csproj
@@ -86,5 +86,8 @@
   <ItemGroup>
     <None Include="Resources\Apple.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\xadrewz.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
